# push-to-whisper

./: .gitignore  CREATING_RELEASE_NOTES.md  CUDA_LICENSES.txt  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_FINAL_SUMMARY.md  PERFORMANCE_OPTIMIZATION_FIXED.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  SYSTEM_RESPONSIVENESS_FIX.md  SYSTEM_TRAY_PLAN.md  build.rs  build_releases.ps1  github_release_notes_v0.2.0.md  github_release_notes_v0.2.0_final.md  performance_optimization_summary.md  push-to-whisper.config  resources.rc
.cargo/: config.toml
docs/: BUILDING_WITH_CUDA.md  README.md  cleanup-summary.md  cuda-compatibility.md  cuda-dll-bundling-summary.md  documentation-cleanup-summary.md  documentation-review-summary.md  fixing-dll-errors.md  implementation-summary.md  notification-implementation-history.md  overlay-notifications.md  performance-optimizations.md  product-requirements.md  system-tray-design.md  test-results-v0.3.1.md  tray-icon.md  visual-features.md
genai_resources/: fern.md  push-to-whisper-prd.md  release_0.2.0_features.md  release_0.2.0_tasks.md  tray-icon.md  tray-item.md  whisper-rs.md
release/: README.txt
release_notes/: README.md  template.md  v0.3.1.md  v0.3.2.md  v0.3.3.md
spec/: README.md  design.md  requirements.md  tasks.md
src/: error.rs  lib.rs  main.rs  state.rs
src/audio/: mod.rs
src/input/: mod.rs
src/model/: mod.rs
src/ui/: ico_data.rs  mod.rs  notification.rs  overlay.rs  settings.rs
src/utils/: mod.rs
src/whisper/: mod.rs
tests/: audio_test.rs  input_test.rs  integration_test.rs  model_test.rs  performance_optimization_test.rs  performance_test.rs  tray_icon_test.rs  ui_test.rs  whisper_test.rs
tools/: README.md  build_releases.ps1  create_release.bat  create_release.rs  create_release.sh  create_release_package.ps1
