[package]
name = "push-to-whisper"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast, private push-to-speak transcription tool using OpenAI's Whisper model"
repository = "https://github.com/independint-pty-ltd/push-to-whisper"
license = "MIT"
readme = "README.md"
keywords = ["speech-to-text", "whisper", "transcription", "audio", "accessibility"]
categories = ["command-line-utilities", "multimedia::audio"]
build = "build.rs"

[features]
default = ["cuda"]
ksni = []
libappindicator = []
cuda = ["whisper-rs/cuda"]

[[bin]]
name = "push-to-whisper"
path = "src/main.rs"

[[bin]]
name = "create_release"
path = "tools/create_release.rs"

[dependencies]
# Audio recording and processing
cpal = "0.15"
hound = "3.5.1"
ringbuf = "0.3.3"

# Whisper speech recognition
whisper-rs = { version = "0.14.2", default-features = false }

# Keyboard and clipboard operations
rdev = "0.5"
clipboard = "0.5"
enigo = "0.1"
keyboard-types = "0.7.0"

# Audio feedback
rodio = "0.17"

# UI and system tray
tray-icon = { version = "0.20.0", features = [] }
# For icon creation
image = "0.24"

# Process control
ctrlc = "3.4.1"

# General utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
simple_logger = "4.3"
crossbeam-channel = "0.5.14"
parking_lot = "0.12"
once_cell = "1.21"

# These are not used in the new approach
# dasp = { version = "0.11.0", features = ["signal"] }
# dasp_interpolate = "0.11.0"
# dasp_signal = "0.11.0"

# New dependencies
clipboard-win = "2.2"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
winreg = "0.52"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
egui = "0.26.0"
eframe = "0.26.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
# For Windows resource embedding
embed-resource = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(target_os = "linux")'.dependencies.tray-item]
version = "0.10.0"
features = ["ksni", "libappindicator"]
