[package]
name = "push-to-whisper"
version = "0.3.3"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast, private push-to-speak transcription tool using OpenAI's Whisper model"
repository = "https://github.com/independint-pty-ltd/push-to-whisper"
license = "MIT"
readme = "README.md"
keywords = ["speech-to-text", "whisper", "transcription", "audio", "accessibility"]
categories = ["command-line-utilities", "multimedia::audio"]
build = "build.rs"

[features]
default = ["cuda"]
ksni = []
libappindicator = []
cuda = ["whisper-rs/cuda"]

[[bin]]
name = "push-to-whisper"
path = "src/main.rs"

[[bin]]
name = "create_release"
path = "tools/create_release.rs"

[dependencies]
# Audio recording and processing
cpal = "0.15"
hound = "3.5.1"
ringbuf = "0.4.8"

# Whisper speech recognition
whisper-rs = { version = "0.14.4", default-features = false }

# Keyboard and clipboard operations
rdev = "0.5"
clipboard = "0.5"
enigo = "0.5.0"
keyboard-types = "0.7.0"

# Audio feedback
rodio = "0.17"

# UI and system tray
# tray-item = { version = "0.10.0", features = [] }
tray-icon = "0.21.1"
eframe = "0.32.1"
egui = "0.32.1"
native-windows-gui = "1.0.13"

# Process control
ctrlc = "3.4.1"

# General utilities
anyhow = "1.0"
thiserror = "2.0.16"
log = "0.4"
simple_logger = "5.0.0"
crossbeam-channel = "0.5.14"
parking_lot = "0.12"
once_cell = "1.21"

# These are not used in the new approach
# dasp = { version = "0.11.0", features = ["signal"] }
# dasp_interpolate = "0.11.0"
# dasp_signal = "0.11.0"

# New dependencies
clipboard-win = "2.2"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
winreg = "0.55.0"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
winit = "0.30.9"

# Add windows-sys under the correct target section
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi", 
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
] }
winrt-notification = "0.5"

[build-dependencies]
# For Windows resource embedding
embed-resource = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(target_os = "linux")'.dependencies.tray-item]
version = "0.10.0"
features = ["ksni", "libappindicator"]
